// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data transaction service Data transaction service search fetches real txs 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "data": Array [
          Object {
            "key": "company",
            "type": "string",
            "value": "Resonova",
          },
        ],
        "fee": "0.001",
        "height": 1060009,
        "id": "AkM4bQ5dVkqWezSgMPdW5iieX98xDsiFjVDbEddntGNv",
        "proofs": Array [
          "2BFgwFEUwDYmCPdUbrX3W4QdPrcDX4ai6tmrY2ab4NgEg9aikUo7RzqHUsgBd5kBpFScxsLQWpE29k9cLPdF5YEt",
        ],
        "sender": "3PLZcCJyYQnfWfzhKXRA4rteCQC9J1ewf5K",
        "senderPublicKey": "BQMVwAHwf2WEEwRsCxtMVcSLrXUhJ3XtCLmSptLx2e6L",
        "timestamp": 2018-06-28T02:12:41.449Z,
        "type": 12,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "data": Array [
          Object {
            "key": "Hello",
            "type": "string",
            "value": "Hello, Waves!",
          },
          Object {
            "key": "When Moon?",
            "type": "string",
            "value": "Soon",
          },
        ],
        "fee": "0.001",
        "height": 1060097,
        "id": "FKL7UhhmV7WnaQh72zb3WeyF7uyBBh47kvdVXqwDoKvS",
        "proofs": Array [
          "2KoLxovNxv1aJ6WSt8WugGRUkcPH6qCQ9DNZgm9bhdEDgD9kDFTbjyPK2guVuup7Dvbee9rMS5t5z6Ff1o3FUu4m",
        ],
        "sender": "3PCP7LeMmWdesQsL3TuHvQwD4a31zjZpU1R",
        "senderPublicKey": "7p8Vzpc27wt567kdCJ6YsTkpukzfJ7XLnK9M3W1qQ1GK",
        "timestamp": 2018-06-28T03:38:59.447Z,
        "type": 12,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "data": Array [
          Object {
            "key": "test",
            "type": "integer",
            "value": "11",
          },
          Object {
            "key": "neg",
            "type": "integer",
            "value": "-9223372036854775808",
          },
          Object {
            "key": "max",
            "type": "integer",
            "value": "9223372036854775807",
          },
          Object {
            "key": "somestring",
            "type": "string",
            "value": "Some silly string",
          },
          Object {
            "key": "longstring",
            "type": "string",
            "value": "ver long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long string",
          },
          Object {
            "key": "testboolF",
            "type": "boolean",
            "value": false,
          },
          Object {
            "key": "testboolT",
            "type": "boolean",
            "value": true,
          },
          Object {
            "key": "testbytes",
            "type": "binary",
            "value": "base64:VGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdA==",
          },
        ],
        "fee": "0.001",
        "height": 1088100,
        "id": "42HFStNghPMnXQLtYeGwFTzxXQRjc2rReubGHjwM5Fea",
        "proofs": Array [
          "YEaTGuRYdemeeo9jKx5swWs7x1zwnNmmtnPU8GVHDf6i8agNxzeHYUEtjD1VoB1quF4cVjqYGPkCLwgUexZLTFb",
        ],
        "sender": "3PCAB4sHXgvtu5NPoen6EXR5yaNbvsEA8Fj",
        "senderPublicKey": "2M25DqL2W4rGFLCFadgATboS8EPqyWAN3DjH12AH5Kdr",
        "timestamp": 2018-07-18T09:46:27.479Z,
        "type": 12,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "data": Array [
          Object {
            "key": "0",
            "type": "integer",
            "value": "0",
          },
          Object {
            "key": "1",
            "type": "integer",
            "value": "1",
          },
          Object {
            "key": "2",
            "type": "integer",
            "value": "4",
          },
          Object {
            "key": "3",
            "type": "integer",
            "value": "9",
          },
          Object {
            "key": "4",
            "type": "integer",
            "value": "16",
          },
          Object {
            "key": "5",
            "type": "integer",
            "value": "25",
          },
          Object {
            "key": "6",
            "type": "integer",
            "value": "36",
          },
          Object {
            "key": "7",
            "type": "integer",
            "value": "49",
          },
          Object {
            "key": "8",
            "type": "integer",
            "value": "64",
          },
          Object {
            "key": "9",
            "type": "integer",
            "value": "81",
          },
          Object {
            "key": "10",
            "type": "integer",
            "value": "100",
          },
          Object {
            "key": "11",
            "type": "integer",
            "value": "121",
          },
          Object {
            "key": "12",
            "type": "integer",
            "value": "144",
          },
          Object {
            "key": "13",
            "type": "integer",
            "value": "169",
          },
          Object {
            "key": "14",
            "type": "integer",
            "value": "196",
          },
          Object {
            "key": "15",
            "type": "integer",
            "value": "225",
          },
          Object {
            "key": "16",
            "type": "integer",
            "value": "256",
          },
          Object {
            "key": "17",
            "type": "integer",
            "value": "289",
          },
          Object {
            "key": "18",
            "type": "integer",
            "value": "324",
          },
          Object {
            "key": "19",
            "type": "integer",
            "value": "361",
          },
          Object {
            "key": "20",
            "type": "integer",
            "value": "400",
          },
          Object {
            "key": "21",
            "type": "integer",
            "value": "441",
          },
          Object {
            "key": "22",
            "type": "integer",
            "value": "484",
          },
          Object {
            "key": "23",
            "type": "integer",
            "value": "529",
          },
          Object {
            "key": "24",
            "type": "integer",
            "value": "576",
          },
          Object {
            "key": "25",
            "type": "integer",
            "value": "625",
          },
          Object {
            "key": "26",
            "type": "integer",
            "value": "676",
          },
          Object {
            "key": "27",
            "type": "integer",
            "value": "729",
          },
          Object {
            "key": "28",
            "type": "integer",
            "value": "784",
          },
          Object {
            "key": "29",
            "type": "integer",
            "value": "841",
          },
          Object {
            "key": "30",
            "type": "integer",
            "value": "900",
          },
          Object {
            "key": "31",
            "type": "integer",
            "value": "961",
          },
          Object {
            "key": "32",
            "type": "integer",
            "value": "1024",
          },
          Object {
            "key": "33",
            "type": "integer",
            "value": "1089",
          },
          Object {
            "key": "34",
            "type": "integer",
            "value": "1156",
          },
          Object {
            "key": "35",
            "type": "integer",
            "value": "1225",
          },
          Object {
            "key": "36",
            "type": "integer",
            "value": "1296",
          },
          Object {
            "key": "37",
            "type": "integer",
            "value": "1369",
          },
          Object {
            "key": "38",
            "type": "integer",
            "value": "1444",
          },
          Object {
            "key": "39",
            "type": "integer",
            "value": "1521",
          },
          Object {
            "key": "40",
            "type": "integer",
            "value": "1600",
          },
          Object {
            "key": "41",
            "type": "integer",
            "value": "1681",
          },
          Object {
            "key": "42",
            "type": "integer",
            "value": "1764",
          },
          Object {
            "key": "43",
            "type": "integer",
            "value": "1849",
          },
          Object {
            "key": "44",
            "type": "integer",
            "value": "1936",
          },
          Object {
            "key": "45",
            "type": "integer",
            "value": "2025",
          },
          Object {
            "key": "46",
            "type": "integer",
            "value": "2116",
          },
          Object {
            "key": "47",
            "type": "integer",
            "value": "2209",
          },
          Object {
            "key": "48",
            "type": "integer",
            "value": "2304",
          },
          Object {
            "key": "49",
            "type": "integer",
            "value": "2401",
          },
          Object {
            "key": "50",
            "type": "integer",
            "value": "2500",
          },
          Object {
            "key": "51",
            "type": "integer",
            "value": "2601",
          },
          Object {
            "key": "52",
            "type": "integer",
            "value": "2704",
          },
          Object {
            "key": "53",
            "type": "integer",
            "value": "2809",
          },
          Object {
            "key": "54",
            "type": "integer",
            "value": "2916",
          },
          Object {
            "key": "55",
            "type": "integer",
            "value": "3025",
          },
          Object {
            "key": "56",
            "type": "integer",
            "value": "3136",
          },
          Object {
            "key": "57",
            "type": "integer",
            "value": "3249",
          },
          Object {
            "key": "58",
            "type": "integer",
            "value": "3364",
          },
          Object {
            "key": "59",
            "type": "integer",
            "value": "3481",
          },
          Object {
            "key": "60",
            "type": "integer",
            "value": "3600",
          },
          Object {
            "key": "61",
            "type": "integer",
            "value": "3721",
          },
          Object {
            "key": "62",
            "type": "integer",
            "value": "3844",
          },
          Object {
            "key": "63",
            "type": "integer",
            "value": "3969",
          },
          Object {
            "key": "64",
            "type": "integer",
            "value": "4096",
          },
          Object {
            "key": "65",
            "type": "integer",
            "value": "4225",
          },
          Object {
            "key": "66",
            "type": "integer",
            "value": "4356",
          },
          Object {
            "key": "67",
            "type": "integer",
            "value": "4489",
          },
          Object {
            "key": "68",
            "type": "integer",
            "value": "4624",
          },
          Object {
            "key": "69",
            "type": "integer",
            "value": "4761",
          },
          Object {
            "key": "70",
            "type": "integer",
            "value": "4900",
          },
          Object {
            "key": "71",
            "type": "integer",
            "value": "5041",
          },
          Object {
            "key": "72",
            "type": "integer",
            "value": "5184",
          },
          Object {
            "key": "73",
            "type": "integer",
            "value": "5329",
          },
          Object {
            "key": "74",
            "type": "integer",
            "value": "5476",
          },
          Object {
            "key": "75",
            "type": "integer",
            "value": "5625",
          },
          Object {
            "key": "76",
            "type": "integer",
            "value": "5776",
          },
          Object {
            "key": "77",
            "type": "integer",
            "value": "5929",
          },
          Object {
            "key": "78",
            "type": "integer",
            "value": "6084",
          },
          Object {
            "key": "79",
            "type": "integer",
            "value": "6241",
          },
          Object {
            "key": "80",
            "type": "integer",
            "value": "6400",
          },
          Object {
            "key": "81",
            "type": "integer",
            "value": "6561",
          },
          Object {
            "key": "82",
            "type": "integer",
            "value": "6724",
          },
          Object {
            "key": "83",
            "type": "integer",
            "value": "6889",
          },
          Object {
            "key": "84",
            "type": "integer",
            "value": "7056",
          },
          Object {
            "key": "85",
            "type": "integer",
            "value": "7225",
          },
          Object {
            "key": "86",
            "type": "integer",
            "value": "7396",
          },
          Object {
            "key": "87",
            "type": "integer",
            "value": "7569",
          },
          Object {
            "key": "88",
            "type": "integer",
            "value": "7744",
          },
          Object {
            "key": "89",
            "type": "integer",
            "value": "7921",
          },
          Object {
            "key": "90",
            "type": "integer",
            "value": "8100",
          },
          Object {
            "key": "91",
            "type": "integer",
            "value": "8281",
          },
          Object {
            "key": "92",
            "type": "integer",
            "value": "8464",
          },
          Object {
            "key": "93",
            "type": "integer",
            "value": "8649",
          },
          Object {
            "key": "94",
            "type": "integer",
            "value": "8836",
          },
          Object {
            "key": "95",
            "type": "integer",
            "value": "9025",
          },
          Object {
            "key": "96",
            "type": "integer",
            "value": "9216",
          },
          Object {
            "key": "97",
            "type": "integer",
            "value": "9409",
          },
          Object {
            "key": "98",
            "type": "integer",
            "value": "9604",
          },
          Object {
            "key": "99",
            "type": "integer",
            "value": "9801",
          },
        ],
        "fee": "0.005",
        "height": 1091268,
        "id": "7sfLr36UfyXomiUpEVygHKqFTwi9Cnd885bhQd9u8KtY",
        "proofs": Array [
          "3ZR6TzgA6yfV7HhyGypKJYthhvvkkv6L7zseT6gTZd2J9uaGqhPeB7A8hY4YVpDAa275MwrHDyYUt3txMLcqJaxd",
        ],
        "sender": "3PLZcCJyYQnfWfzhKXRA4rteCQC9J1ewf5K",
        "senderPublicKey": "BQMVwAHwf2WEEwRsCxtMVcSLrXUhJ3XtCLmSptLx2e6L",
        "timestamp": 2018-07-20T16:14:23.705Z,
        "type": 12,
        "version": 1,
      },
    },
    Object {
      "__type": "transaction",
      "data": Object {
        "data": Array [
          Object {
            "key": "113",
            "type": "integer",
            "value": "12769",
          },
          Object {
            "key": "199",
            "type": "integer",
            "value": "39601",
          },
          Object {
            "key": "198",
            "type": "integer",
            "value": "39204",
          },
          Object {
            "key": "197",
            "type": "integer",
            "value": "38809",
          },
          Object {
            "key": "196",
            "type": "integer",
            "value": "38416",
          },
          Object {
            "key": "195",
            "type": "integer",
            "value": "38025",
          },
          Object {
            "key": "194",
            "type": "integer",
            "value": "37636",
          },
          Object {
            "key": "193",
            "type": "integer",
            "value": "37249",
          },
          Object {
            "key": "192",
            "type": "integer",
            "value": "36864",
          },
          Object {
            "key": "191",
            "type": "integer",
            "value": "36481",
          },
          Object {
            "key": "190",
            "type": "integer",
            "value": "36100",
          },
          Object {
            "key": "189",
            "type": "integer",
            "value": "35721",
          },
          Object {
            "key": "188",
            "type": "integer",
            "value": "35344",
          },
          Object {
            "key": "187",
            "type": "integer",
            "value": "34969",
          },
          Object {
            "key": "186",
            "type": "integer",
            "value": "34596",
          },
          Object {
            "key": "185",
            "type": "integer",
            "value": "34225",
          },
          Object {
            "key": "184",
            "type": "integer",
            "value": "33856",
          },
          Object {
            "key": "183",
            "type": "integer",
            "value": "33489",
          },
          Object {
            "key": "182",
            "type": "integer",
            "value": "33124",
          },
          Object {
            "key": "181",
            "type": "integer",
            "value": "32761",
          },
          Object {
            "key": "180",
            "type": "integer",
            "value": "32400",
          },
          Object {
            "key": "179",
            "type": "integer",
            "value": "32041",
          },
          Object {
            "key": "178",
            "type": "integer",
            "value": "31684",
          },
          Object {
            "key": "177",
            "type": "integer",
            "value": "31329",
          },
          Object {
            "key": "176",
            "type": "integer",
            "value": "30976",
          },
          Object {
            "key": "175",
            "type": "integer",
            "value": "30625",
          },
          Object {
            "key": "174",
            "type": "integer",
            "value": "30276",
          },
          Object {
            "key": "173",
            "type": "integer",
            "value": "29929",
          },
          Object {
            "key": "172",
            "type": "integer",
            "value": "29584",
          },
          Object {
            "key": "171",
            "type": "integer",
            "value": "29241",
          },
          Object {
            "key": "170",
            "type": "integer",
            "value": "28900",
          },
          Object {
            "key": "169",
            "type": "integer",
            "value": "28561",
          },
          Object {
            "key": "168",
            "type": "integer",
            "value": "28224",
          },
          Object {
            "key": "167",
            "type": "integer",
            "value": "27889",
          },
          Object {
            "key": "166",
            "type": "integer",
            "value": "27556",
          },
          Object {
            "key": "165",
            "type": "integer",
            "value": "27225",
          },
          Object {
            "key": "164",
            "type": "integer",
            "value": "26896",
          },
          Object {
            "key": "163",
            "type": "integer",
            "value": "26569",
          },
          Object {
            "key": "162",
            "type": "integer",
            "value": "26244",
          },
          Object {
            "key": "161",
            "type": "integer",
            "value": "25921",
          },
          Object {
            "key": "160",
            "type": "integer",
            "value": "25600",
          },
          Object {
            "key": "159",
            "type": "integer",
            "value": "25281",
          },
          Object {
            "key": "158",
            "type": "integer",
            "value": "24964",
          },
          Object {
            "key": "157",
            "type": "integer",
            "value": "24649",
          },
          Object {
            "key": "156",
            "type": "integer",
            "value": "24336",
          },
          Object {
            "key": "155",
            "type": "integer",
            "value": "24025",
          },
          Object {
            "key": "154",
            "type": "integer",
            "value": "23716",
          },
          Object {
            "key": "153",
            "type": "integer",
            "value": "23409",
          },
          Object {
            "key": "152",
            "type": "integer",
            "value": "23104",
          },
          Object {
            "key": "151",
            "type": "integer",
            "value": "22801",
          },
          Object {
            "key": "150",
            "type": "integer",
            "value": "22500",
          },
          Object {
            "key": "149",
            "type": "integer",
            "value": "22201",
          },
          Object {
            "key": "148",
            "type": "integer",
            "value": "21904",
          },
          Object {
            "key": "147",
            "type": "integer",
            "value": "21609",
          },
          Object {
            "key": "146",
            "type": "integer",
            "value": "21316",
          },
          Object {
            "key": "145",
            "type": "integer",
            "value": "21025",
          },
          Object {
            "key": "144",
            "type": "integer",
            "value": "20736",
          },
          Object {
            "key": "143",
            "type": "integer",
            "value": "20449",
          },
          Object {
            "key": "142",
            "type": "integer",
            "value": "20164",
          },
          Object {
            "key": "141",
            "type": "integer",
            "value": "19881",
          },
          Object {
            "key": "140",
            "type": "integer",
            "value": "19600",
          },
          Object {
            "key": "139",
            "type": "integer",
            "value": "19321",
          },
          Object {
            "key": "138",
            "type": "integer",
            "value": "19044",
          },
          Object {
            "key": "137",
            "type": "integer",
            "value": "18769",
          },
          Object {
            "key": "136",
            "type": "integer",
            "value": "18496",
          },
          Object {
            "key": "135",
            "type": "integer",
            "value": "18225",
          },
          Object {
            "key": "134",
            "type": "integer",
            "value": "17956",
          },
          Object {
            "key": "133",
            "type": "integer",
            "value": "17689",
          },
          Object {
            "key": "132",
            "type": "integer",
            "value": "17424",
          },
          Object {
            "key": "131",
            "type": "integer",
            "value": "17161",
          },
          Object {
            "key": "130",
            "type": "integer",
            "value": "16900",
          },
          Object {
            "key": "129",
            "type": "integer",
            "value": "16641",
          },
          Object {
            "key": "128",
            "type": "integer",
            "value": "16384",
          },
          Object {
            "key": "127",
            "type": "integer",
            "value": "16129",
          },
          Object {
            "key": "126",
            "type": "integer",
            "value": "15876",
          },
          Object {
            "key": "125",
            "type": "integer",
            "value": "15625",
          },
          Object {
            "key": "124",
            "type": "integer",
            "value": "15376",
          },
          Object {
            "key": "123",
            "type": "integer",
            "value": "15129",
          },
          Object {
            "key": "122",
            "type": "integer",
            "value": "14884",
          },
          Object {
            "key": "121",
            "type": "integer",
            "value": "14641",
          },
          Object {
            "key": "120",
            "type": "integer",
            "value": "14400",
          },
          Object {
            "key": "119",
            "type": "integer",
            "value": "14161",
          },
          Object {
            "key": "118",
            "type": "integer",
            "value": "13924",
          },
          Object {
            "key": "117",
            "type": "integer",
            "value": "13689",
          },
          Object {
            "key": "116",
            "type": "integer",
            "value": "13456",
          },
          Object {
            "key": "115",
            "type": "integer",
            "value": "13225",
          },
          Object {
            "key": "114",
            "type": "integer",
            "value": "12996",
          },
          Object {
            "key": "112",
            "type": "integer",
            "value": "12544",
          },
          Object {
            "key": "111",
            "type": "integer",
            "value": "12321",
          },
          Object {
            "key": "110",
            "type": "integer",
            "value": "12100",
          },
          Object {
            "key": "109",
            "type": "integer",
            "value": "11881",
          },
          Object {
            "key": "108",
            "type": "integer",
            "value": "11664",
          },
          Object {
            "key": "107",
            "type": "integer",
            "value": "11449",
          },
          Object {
            "key": "106",
            "type": "integer",
            "value": "11236",
          },
          Object {
            "key": "105",
            "type": "integer",
            "value": "11025",
          },
          Object {
            "key": "104",
            "type": "integer",
            "value": "10816",
          },
          Object {
            "key": "103",
            "type": "integer",
            "value": "10609",
          },
          Object {
            "key": "102",
            "type": "integer",
            "value": "10404",
          },
          Object {
            "key": "101",
            "type": "integer",
            "value": "10201",
          },
          Object {
            "key": "100",
            "type": "integer",
            "value": "10000",
          },
        ],
        "fee": "0.006",
        "height": 1091299,
        "id": "GXKwTAHoNVaj4dZUfRKdMqbwgxXsCDu6hsPK4RJiz1wN",
        "proofs": Array [
          "5UEaG4497gh5QemBStPo99oHRzjMWU4x2xTU3cyd6hn5hzwZKP9dw4uDwvCUMvezni9qhoqyBKRoaPMz7jxeDvEP",
        ],
        "sender": "3PLZcCJyYQnfWfzhKXRA4rteCQC9J1ewf5K",
        "senderPublicKey": "BQMVwAHwf2WEEwRsCxtMVcSLrXUhJ3XtCLmSptLx2e6L",
        "timestamp": 2018-07-20T16:48:05.918Z,
        "type": 12,
        "version": 1,
      },
    },
  ],
  "lastCursor": "MjAxOC0wNy0yMFQxNjo0ODowNS45MThaOjpHWEt3VEFIb05WYWo0ZFpVZlJLZE1xYndneFhzQ0R1NmhzUEs0UkppejF3Tjo6YXNj",
}
`;

exports[`Data transaction service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "data": Array [
      Object {
        "key": "company",
        "type": "string",
        "value": "Resonova",
      },
    ],
    "fee": "0.001",
    "height": 1060009,
    "id": "AkM4bQ5dVkqWezSgMPdW5iieX98xDsiFjVDbEddntGNv",
    "proofs": Array [
      "2BFgwFEUwDYmCPdUbrX3W4QdPrcDX4ai6tmrY2ab4NgEg9aikUo7RzqHUsgBd5kBpFScxsLQWpE29k9cLPdF5YEt",
    ],
    "sender": "3PLZcCJyYQnfWfzhKXRA4rteCQC9J1ewf5K",
    "senderPublicKey": "BQMVwAHwf2WEEwRsCxtMVcSLrXUhJ3XtCLmSptLx2e6L",
    "timestamp": 2018-06-28T02:12:41.449Z,
    "type": 12,
    "version": 1,
  },
}
`;

exports[`Data transaction service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "data": Array [
          Object {
            "key": "company",
            "type": "string",
            "value": "Resonova",
          },
        ],
        "fee": "0.001",
        "height": 1060009,
        "id": "AkM4bQ5dVkqWezSgMPdW5iieX98xDsiFjVDbEddntGNv",
        "proofs": Array [
          "2BFgwFEUwDYmCPdUbrX3W4QdPrcDX4ai6tmrY2ab4NgEg9aikUo7RzqHUsgBd5kBpFScxsLQWpE29k9cLPdF5YEt",
        ],
        "sender": "3PLZcCJyYQnfWfzhKXRA4rteCQC9J1ewf5K",
        "senderPublicKey": "BQMVwAHwf2WEEwRsCxtMVcSLrXUhJ3XtCLmSptLx2e6L",
        "timestamp": 2018-06-28T02:12:41.449Z,
        "type": 12,
        "version": 1,
      },
    },
    null,
    Object {
      "__type": "transaction",
      "data": Object {
        "data": Array [
          Object {
            "key": "test",
            "type": "integer",
            "value": "11",
          },
          Object {
            "key": "neg",
            "type": "integer",
            "value": "-9223372036854775808",
          },
          Object {
            "key": "max",
            "type": "integer",
            "value": "9223372036854775807",
          },
          Object {
            "key": "somestring",
            "type": "string",
            "value": "Some silly string",
          },
          Object {
            "key": "longstring",
            "type": "string",
            "value": "ver long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long long string",
          },
          Object {
            "key": "testboolF",
            "type": "boolean",
            "value": false,
          },
          Object {
            "key": "testboolT",
            "type": "boolean",
            "value": true,
          },
          Object {
            "key": "testbytes",
            "type": "binary",
            "value": "base64:VGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdAVGVzdA==",
          },
        ],
        "fee": "0.001",
        "height": 1088100,
        "id": "42HFStNghPMnXQLtYeGwFTzxXQRjc2rReubGHjwM5Fea",
        "proofs": Array [
          "YEaTGuRYdemeeo9jKx5swWs7x1zwnNmmtnPU8GVHDf6i8agNxzeHYUEtjD1VoB1quF4cVjqYGPkCLwgUexZLTFb",
        ],
        "sender": "3PCAB4sHXgvtu5NPoen6EXR5yaNbvsEA8Fj",
        "senderPublicKey": "2M25DqL2W4rGFLCFadgATboS8EPqyWAN3DjH12AH5Kdr",
        "timestamp": 2018-07-18T09:46:27.479Z,
        "type": 12,
        "version": 1,
      },
    },
  ],
}
`;
